product is scalable 90 %